--- a/templates/index.html
+++ b/templates/index.html
@@ -8,11 +8,11 @@
 welcome to my webpage
 <ul>
     <li><a href="/news">查看新闻</a></li>
-    <li><a href="/products">查看产品</a></li>
+    <li><a href="{{ url_for('productpage',a=15) }}">查看产品</a></li>
 </ul>
 <hr>
 <p>这是采用render_template模板方法获得的内容:</p>
 <br>
-{{ data }} #显示出传递过来的变量内容
+{{ data }}
 </body>
 </html>
