--- a/templates/news.html
+++ b/templates/news.html
@@ -10,6 +10,6 @@
 <hr>
 <p style="color:red">{{data}}</p>
 <p><a href="/">回到首页</a></p>
-<p> <a href="{{ url_for('productpage') }}">去看产品页</a></p>
+{#<p> <a href="{{ url_for('productpage') }}">去看产品页</a></p>#}
 </body>
 </html>
