--- a/templates/index.html
+++ b/templates/index.html
@@ -2,17 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>welcome to 2020</title>
+    <style> .rr {
+        float: left;
+        width: 50%;
+    }</style>
 </head>
 <body>
-welcome to my webpage
+<div style="width:600px;height:30px">
+    <div class="rr"> welcome to my webpage</div>
+    <div class="rr">
+        {% if session['username'] == 'cao'  %}     {#如果session中用户名为cao，以及注销链接#}
+        <a href="#">{{ session['username']}}</a>
+        <a href="#">注销</a>
+        {% else %}                  {#否则就显示登录与注册链接#}
+            <a href="#">登陆</a>
+            <a href="#">注册</a>
+        {% endif %}
+
+    </div>
+    <div style="clear:both;"></div>
+</div>
+<img src="{{ url_for('static',filename='img/main.jpg') }}" alt="">
+<hr>
 <ul>
     <li><a href="/news">查看新闻</a></li>
-    <li><a href="/products">查看产品</a></li>
+    <li><a href="/product">查看产品</a></li>
 </ul>
-<hr>
-<p>这是采用render_template模板方法获得的内容:</p>
-<br>
-{{ data }} #显示出传递过来的变量内容
 </body>
 </html>
