--- a/templates/news.html
+++ b/templates/news.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <title>news</title>
 </head>
-<body>
 <p>今日新闻</p>
-<p>2020年1月28日0-24时，浙江省报告新型冠状病毒感染的肺炎新增确诊病例123例，新增重症病例11例，新增出院病例2例。</p>
+{% for item in data %}             {#采用循环来读取列表中的内容#}
+     <p style="color:red">{{item}}</p>
+{% endfor %}
 <hr>
-<p style="color:red">{{data}}</p>
-<p><a href="/">回到首页</a></p>
-<p> <a href="{{ url_for('productpage') }}">去看产品页</a></p>
-</body>
+<p><a href="/ ">回到首页</a></p>
+<p> <a href="{{ url_for('productpage',a=50) }}">去看产品页</a></p>
 </html>
