通过sqlite3查询数据库

--- a/templates/products.html
+++ b/templates/products.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <p>今日商品新品</p>
-<p>苹果发布iPhone15 PRO MAX 旺，售价9999。</p>
+<p>苹果发布iPhone{{ data }}PRO MAX 旺，售价9999。</p>
 <hr>
 <p style="color:red">{{data}}</p>
 <p><a href="/">回到首页</a></p>
