--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,24 @@
-{#<!DOCTYPE html>#}
-{#<html lang="en">#}
-{#<head>#}
-{#    <meta charset="UTF-8">#}
-{#    <title>welcome to 2020</title>#}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>welcome to 2020</title>
 {#    <style> .rr {#}
 {#        float: left;#}
 {#        width: 50%;#}
 {#    }</style>#}
-{#</head>#}
-{#<body>#}
+</head>
+<body>
+    welcome to my webpage
+    <hr>
+    <p>这是使用render_template模板方法获取的内容</p>
+</body>
+</html>
+
+
+
+{##}
+{##}
 {#<div style="width:600px;height:30px">#}
 {#    <div class="rr"> welcome to my webpage</div>#}
 {#    <div class="rr">#}
@@ -29,5 +39,3 @@
 {#    <li><a href="/news">查看新闻</a></li>#}
 {#    <li><a href="/product">查看产品</a></li>#}
 {#</ul>#}
-{#</body>#}
-{#</html>#}
