--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,13 @@
 </head>
 <body>
    welcome to my webpage
+<ul>
+    <li><a href="/news">查看新闻</a></li>
+    <li><a href="/product">查看产品</a></li>
+</ul>
   <hr>
    <p>这是采用render_template模板方法获得的内容:</p>
    <br>
-  {{data}}  {#显示出传递过来的变量内容#}
+  {{data}}
 </body>
-<hr>
-{#<img src="{{ url_for('static',filename='img/main.jpg')}}" alt="">#}
 </html>
