--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
    welcome to my webpage
 <ul>
     <li><a href="/news">查看新闻</a></li>
-    <li><a href="/product">查看产品</a></li>
+    <li><a href="{{ url_for('productpage',a=15) }}">查看产品</a></li>  #注意超链接带参数a传递
 </ul>
   <hr>
    <p>这是采用render_template模板方法获得的内容:</p>
