--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>welcome to 2023</title>
+    <style> .rr{float:left;width:50%;}</style>
 </head>
 <body>
-   welcome to my webpage
+<div style="width:600px;height:30px">
+    <div class="rr"> welcome to my webpage  </div>
+    <div class="rr">
+       {% if data != ''  %}    {#如果存在data变量的值，就显示用户姓名，以及注销链接#}
+        <a href="#">{{ data}}</a>
+        <a href="#">注销</a>
+    {% else %}                  {#否则就显示登录与注册链接#}
+        <a href="#">登陆</a>
+        <a href="#">注册</a>
+    {% endif %}
+
+    </div>
+    <div style="clear:both;"></div>
+</div>
+<img src="{{ url_for('static',filename='img/main.jpg')}}" alt="">
+<hr>
 <ul>
     <li><a href="/news">查看新闻</a></li>
-    <li><a href="{{ url_for('productpage',a=15) }}">查看产品</a></li>  #注意超链接带参数a传递
+    <li><a href="/product">查看产品</a></li>
 </ul>
-  <hr>
-   <p>这是采用render_template模板方法获得的内容:</p>
-   <br>
-  {{data}}
 </body>
 </html>
