--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
 <div style="width:600px;height:30px">
     <div class="rr"> welcome to my webpage  </div>
     <div class="rr">
-       {% if data != ''  %}    {#如果存在data变量的值，就显示用户姓名，以及注销链接#}
-        <a href="#">{{ data}}</a>
+       {% if session['username'] == 'pupu'  %}     {#如果session中用户名为cao，以及注销链接#}
+        <a href="#">{{ session['username']}}</a>
         <a href="#">注销</a>
     {% else %}                  {#否则就显示登录与注册链接#}
         <a href="#">登陆</a>
