--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
             <a href="#">{{ session['username'] }}</a>
             <a href="#">注销</a>
         {% else %}                  {#否则就显示登录与注册链接#}
-            <a href="#">登陆</a>
+            <a href="/login">登陆</a>
             <a href="#">注册</a>
         {% endif %}
 
@@ -27,7 +27,7 @@
 <hr>
 <ul>
     <li><a href="/news">查看新闻</a></li>
-    <li><a href="/product">查看产品</a></li>
+    <li><a href="{{url_for('productpage',a=15)}}">查看产品</a></li>
 </ul>
 </body>
 </html>
