--- a/templates/news.html
+++ b/templates/news.html
@@ -8,8 +8,8 @@
 <p>今日新闻</p>
 <p>2020年1月28日0-24时，浙江省报告新型冠状病毒感染的肺炎新增确诊病例123例，新增重症病例11例，新增出院病例2例。</p>
 <hr>
-<p style="color:red">{{data}}</p>
+{#<p style="color:red">{{data}}</p>#}
 <p><a href="/">回到首页</a></p>
-<p> <a href="{{ url_for('productpage') }}">去看产品页</a></p>
+<p><a href="{{url_for('productpage',a=15)}}">去看产品页</a></p>
 </body>
 </html>
