--- a/templates/news.html
+++ b/templates/news.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 <p>今日新闻</p>
-{% for item in data %}             #采用循环来读取列表中的内容
+采用循环来读取列表中的内容:
+{% for item in data %}
     <p style="color:red">{{ item }}</p>
 {% endfor %}
 <hr>
